css/index.css
body{
    background-color:black;
    color: white;
    overflow-x: hidden;
}

#backgroundCanvas,
#starsCanvas {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    pointer-events: none;
    z-index: -1;
}

.menu{
    padding: .5rem;
    width: 2rem;
    height: 1.2rem;
    
    display: flex;
    flex-direction: column;
    justify-content: space-between;
}

    .menu-display{
        position: fixed;
        top: 0;
        left: 0;

        width: 250px;
        height: 100vh;
        align-items: center;

        background: white;
        color: black;

        transform: translateX(-100%);
        transition: transform .4s ease;
    }

    .x {
        position: relative;
        width: 40px;
        height: 40px;
    }

    .x::before,
    .x::after {
        content: "";
        position: absolute;
        top: 50%;
        left: 50%;
        width: 20px;
        height: 4px;
        background: black;
        border-radius: 999px;
        transform-origin: center;
    }

    .x::before {
        transform: translate(-50%, -50%) rotate(45deg);
    }

    .x::after {
        transform: translate(-50%, -50%) rotate(-45deg);
    }

    .menu-display ul li{
        font-size: 2rem;
        text-align: center;
        margin-right: 3rem;
    }

    .menu-display ul li a{
        text-decoration: none;
        color: black;
    }

    .menu-display.active{
        transform: translateX(0);
    }

.line{
    height: .4rem;
    background-color: white;
    border-radius: 100px;
}

header{
    font-family: 'Poppins', sans-serif;
    font-size: clamp(3rem, 8vw ,18rem);
    font-weight: bold;

    padding: 2rem;
    text-align: left;
}

.top-bar {
    display: flex;
    align-items: center;
    gap: .5rem;
}

.name{
    visibility: hidden;
}

.dev{
    padding-left: 3rem;
}

.skill-header{
    font-weight: bold;
    font-family: 'Ubuntu Mono', monospace;
    font-size: 2.5rem;

    padding-top: 3rem;
    text-align: center;
}


.skills-grid{
    display: grid;
    grid-template-columns: 1fr;
    width: 80%;
    margin: 0 auto;
    justify-content: center;
}

.card{
    aspect-ratio: 1 / 1;
    border: 2px solid white;
}

.card-header{
    display:flex;
    align-items: center;
    justify-content: center;
    position: relative;

    font-size: 1rem;
    font-family: 'Poppins';
}

h3{
    position: relative;
    top: 2px;
    line-height: 1;
}

h3 span{
    padding-left: 1.5rem;
    margin-top: -4px;
    display: inline-block;
}

.card-header.technical::before{
    content: "";
    position: absolute;
    top: 50%;
    left: 52%;

    width: 46%;
    height: 20%;
    background: #9A0E0E;

    transform: translate(-50%, -50%);
    z-index: -1;
}

.card-header.methodology::before{
    content: "";
    position: absolute;
    top: 50%;
    left: 48%;

    width: 50%;
    height: 20%;
    background: #0A801F;

    transform: translate(-50%, -50%);
    z-index: -1;
}

.card-header.web::before{
    content: "";
    position: absolute;
    top: 50%;
    left: 48%;

    width: 50%;
    height: 20%;
    background: #081283;

    transform: translate(-50%, -50%);
    z-index: -1;
}

svg{
    max-width: 100%;
}

.card_svg{
    width: 15%;
    aspect-ratio: 1 / 1;
    flex-shrink: 0;
    object-fit: cover;
}

ul li{
    list-style-type: none;
    font-family: 'Ubuntu Mono', monospace;

    display: flex;
    flex-direction: column;
    align-items: center;
    line-height: 2;
    margin-right: 1.5rem;
}

.about-header{
    font-weight: bold;
    font-family: 'Ubuntu Mono', monospace;
    font-size: 2.5rem;

    padding-top: 3rem;
    text-align: center;
}

.about-content main{
    font-family: 'Poppins', sans-serif;

    text-align: center;
}

.about-content pre{
    font-size: .6em;

    overflow: hidden;
    text-align: center;
}

.scroll-circle{
    display: none;
}

.scroll-center{
    visibility: hidden;
}


@media(min-width:768px){

    body{
        cursor: none;
    }

    .top-bar{
        position: fixed;
    }

    .cursor-dot {
        position: fixed;
        width: 10px;
        height: 10px;
        background: #9A0E0E;
        border-radius: 50%;
        pointer-events: none;
        transform: translate(-50%, -50%);
        z-index: 9999;
    }

    .cursor-ring {
        position: fixed;
        width: 35px;
        height: 35px;
        border: 2px solid #9A0E0E;
        border-radius: 50%;
        pointer-events: none;
        transform: translate(-50%, -50%);
        z-index: 9998;
    }

    .menu{
        padding: 1rem;
        width: 3.5rem;
        height: 2rem;
    }

    .menu:hover .line{
        background-color: #9A0E0E;
    }

    .menu-display ul li:hover{
        font-weight: bold;
    }

    .line{
        height: .7rem;
        background-color: white;
        border-radius: 100px;
    }

    .name{
        font-family: "Ubuntu Mono", monospace;
        font-size: clamp(1rem, 3vh, 5rem);

        color: white;
        visibility: visible;
    }
    

    header{
        font-size: clamp(3rem, 9vw ,18rem);

        padding-left: 5rem;
        padding-top: 10rem;
        margin-bottom:clamp(25rem, 5vw, 30rem);
    }

    .dev{
        padding-left: 10rem;
    }

    .skill-header{
        font-size: clamp(3rem, 5vw, 6rem);

        margin-bottom: .75rem;
    }

    .skills-grid{
        grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
        width: 90%;

        margin-bottom:clamp(25rem, 4vw, 29rem);
    }

    .card-header{
        font-size: clamp(1rem, 5vw, 1.5rem);
    }

    ul li{
        font-size: clamp(1rem, 1.5vw, 2.5rem);
    }


    .about-header{
        font-size: clamp(3rem, 5vw, 6rem);

        margin-top: clamp(1rem, 5vw, 9rem);
        margin-bottom: .75rem;
    }

    .about-content {
        display: flex;
        width: 80%;
        margin: 0 auto;
        flex-wrap: wrap;
        gap: 5rem;
    }

    .about-content main {
        flex: 3;
        font-size: clamp(1.2rem, 1.2vw + 1rem, 2.5rem);

        padding-top: clamp(1rem, 1vw + 4rem, 5rem);
    }

    .about-content aside {
        flex: 1;
        font-size: clamp(0.8rem, 0.8vw + 0.6rem, 2.5rem);
    }

    .scroll-circle {
        display: block;
        position: fixed;
        bottom: 2rem;
        right: 2rem;

        width: 120px;
        height: 120px;

        pointer-events: none;
    }

    .scroll-rotator{
        width: 100%;
        height: 100%;
        animation: spin 8s linear infinite;
    }

    .scroll-text {
        font-size: 12px;
        letter-spacing: 2px;
        font-family: 'Ubuntu Mono', monospace;
        fill: white;
    }

    .scroll-center{
        visibility: visible;
        position: absolute;
        top: 54%;
        left: 50%;
        transform: translate(-50%, -50%);

        font-size: 2rem;
        font-family: 'Poppins';
        color: white;
        pointer-events: none;
    }

    .scroll-circle svg {
        width: 100%;
        height: 100%;
        fill: white;
    }

    @keyframes spin {
        from{
            transform: rotate(0deg);
        }
        to{
            transform: rotate(360deg);
        }
    }

}

